<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/text_margin_top"
    tools:context=".controller.NewMeetingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/new_meeting_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/new_meeting_top_app_bar"
                style="@style/ToolBarStyle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/main_menu"
                app:titleTextAppearance="@style/ToolBarStyle" />
        </com.google.android.material.appbar.AppBarLayout>


        <ImageView
            android:id="@+id/new_meeting_image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/meeting_imageview_height"
            android:layout_gravity="top"
            android:layout_marginBottom="12dip"
            android:src="@drawable/ic_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_meeting_appbar" />

        <EditText
            android:id="@+id/new_meeting_topic_edittext"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_title"
            android:hint="@string/add_title_placeholder"
            android:inputType="textMultiLine"
            android:paddingLeft="0dip"
            android:textSize="@dimen/title_size"
            app:drawableTint="@color/drawable_start_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_meeting_image_view" />

        <TextView
            android:id="@+id/new_meeting_date_textview"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/meeting_date_placeholder"
            app:drawableStartCompat="@drawable/ic_calendar"
            app:drawableTint="@color/drawable_start_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_meeting_topic_edittext" />

        <TextView
            android:id="@+id/new_meeting_time_textview"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/meeting_time_placeholder"
            app:drawableStartCompat="@drawable/ic_schedule"
            app:drawableTint="@color/drawable_start_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_meeting_date_textview" />

        <TextView
            android:id="@+id/new_meeting_room_textview"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/meeting_room_placeholder"
            app:drawableStartCompat="@drawable/ic_room"
            app:drawableTint="@color/drawable_start_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_meeting_time_textview" />

        <TextView
            android:id="@+id/new_meeting_attendees_adding_textview"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/add_attendees_label"
            app:drawableStartCompat="@drawable/ic_person"
            app:drawableTint="@color/drawable_start_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_meeting_room_textview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/attendees_mail_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/meeting_details_listview_margin_start"
            android:layout_marginEnd="@dimen/text_margin_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_meeting_attendees_adding_textview"
            tools:listitem="@layout/listview_item" />

        <Button
            android:id="@+id/new_meeting_save_button"
            style="@style/button_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin_horizontal"
            android:padding="@dimen/button_padding"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textSize="@dimen/title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendees_mail_recyclerview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>