<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter_date"
        android:icon="@drawable/ic_calendar"
        android:title="@string/filter_by_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/filter_room"
        android:icon="@drawable/ic_room"
        android:title="@string/filter_by_room"
        app:showAsAction="never" />
</menu>