...
        android:layout_gravity="center_vertical"
        android:text="@string/find_attendee_label"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/mail_validation_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mail_dialog_fab_margin_start"
        android:layout_gravity="center_vertical"
        app:backgroundTint="@color/darkblue"
        app:srcCompat="@drawable/ic_validate"
...
        android:padding="@dimen/research_edittext_padding"
        android:singleLine="true"
        android:textSize="@dimen/subtitle_size" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_mail_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size" />


</LinearLayout>
