<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="@dimen/dialog_box_width"
    android:layout_height="@dimen/dialog_box_height"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/layout_margin_top">

    <TextView
        android:id="@+id/research_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/find_room_label"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/room_example_placeholder"
        android:padding="@dimen/research_edittext_padding"
        android:singleLine="true"
        android:textSize="@dimen/subtitle_size" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>